--- a/services/src/main/resources/templates/announcement-template_es.html
+++ b/services/src/main/resources/templates/announcement-template_es.html
@@ -138,7 +138,7 @@
                                             <td class="pad" style="padding-bottom:10px;padding-left:30px;padding-right:30px;padding-top:10px;">
                                                 <div style="color:#2f2f2f;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;line-height:150%;text-align:left;mso-line-height-alt:24px;">
                                                     <p style="margin: 0; word-break: break-word;">&nbsp;</p>
-                                                    <p style="margin: 0;" th:text="'There is a new comment on ' + ${postTitle} + '!'"></p>
+                                                    <p style="margin: 0;" th:text="'Hay un nuevo anuncio: ' + ${postTitle}"></p>
                                                 </div>
                                             </td>
                                         </tr>
@@ -163,7 +163,7 @@
                                         <tr>
                                             <td class="pad" style="padding-left: 20px; padding-right: 20px; padding-top: 40px; text-align: center;"> <!-- Add text-align: center; -->
                                                 <div style="color: #2f2f2f; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 16px; letter-spacing: 0px; line-height: 150%; text-align: center; mso-line-height-alt: 24px;">
-                                                    <p style="margin: 0; word-break: break-word;"><strong><span>Click the button below to see the comment!<br></span></strong></p>
+                                                    <p style="margin: 0; word-break: break-word;"><strong><span>Haz click en el botón debajo para ver el anuncio!<br></span></strong></p>
                                                 </div>
                                             </td>
                                         </tr>
@@ -189,7 +189,7 @@
                                     <table class="button_block block-4" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                                         <tr>
                                             <td class="pad">
-                                                <div class="alignment" align="center"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" th:href="@{${postPath}}" style="height:38px;width:195px;v-text-anchor:middle;" arcsize="0%" stroke="false" fillcolor="#9ad379"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:14px"><![endif]--><a th:href="@{${postPath}}" target="_blank" style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#9ad379;border-radius:0px;width:auto;border-top:0px solid #8a3b8f;font-weight:bold;border-right:0px solid #8a3b8f;border-bottom:0px solid #8a3b8f;border-left:0px solid #8a3b8f;padding-top:5px;padding-bottom:5px;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;font-size:14px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:40px;padding-right:40px;font-size:14px;display:inline-block;letter-spacing:1px;"><span style="word-break:break-word;"><span style="line-height: 28px;" data-mce-style>SEE COMMENT<br></span></span></span></a><!--[if mso]></center></v:textbox></v:roundrect><![endif]--></div>
+                                                <div class="alignment" align="center"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" th:href="@{${postPath}}" style="height:38px;width:195px;v-text-anchor:middle;" arcsize="0%" stroke="false" fillcolor="#9ad379"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:14px"><![endif]--><a th:href="@{${postPath}}" target="_blank" style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#9ad379;border-radius:0px;width:auto;border-top:0px solid #8a3b8f;font-weight:bold;border-right:0px solid #8a3b8f;border-bottom:0px solid #8a3b8f;border-left:0px solid #8a3b8f;padding-top:5px;padding-bottom:5px;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;font-size:14px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:40px;padding-right:40px;font-size:14px;display:inline-block;letter-spacing:1px;"><span style="word-break:break-word;"><span style="line-height: 28px;" data-mce-style>VER ANUNCIO<br></span></span></span></a><!--[if mso]></center></v:textbox></v:roundrect><![endif]--></div>
                                             </td>
                                         </tr>
                                     </table>
@@ -201,31 +201,31 @@
                 </tr>
                 </tbody>
             </table>
-            <!--            <table class="row row-4" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">-->
-            <!--                <tbody>-->
-            <!--                <tr>-->
-            <!--                    <td>-->
-            <!--                        <table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #fdfaf1; color: #000; width: 680px; margin: 0 auto;" width="680">-->
-            <!--                            <tbody>-->
-            <!--                            <tr>-->
-            <!--                                <td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">-->
-            <!--                                    <table class="paragraph_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">-->
-            <!--                                        <tr>-->
-            <!--&lt;!&ndash;                                            <td class="pad" style="padding-bottom:40px;padding-left:30px;padding-right:30px;padding-top:40px;">&ndash;&gt;-->
-            <!--&lt;!&ndash;                                                <div style="color:#2f2f2f;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;font-size:14px;line-height:150%;text-align:center;mso-line-height-alt:21px;">&ndash;&gt;-->
-            <!--&lt;!&ndash;                                                    <p style="margin: 0; word-break: break-word;"><span><span style="color: #000000;">*Click here to unsuscribe from this post</span><span style="color: #000000;">.</span></span></p>&ndash;&gt;-->
-            <!--&lt;!&ndash;                                                </div>&ndash;&gt;-->
-            <!--&lt;!&ndash;                                            </td>&ndash;&gt;-->
-            <!--                                        </tr>-->
-            <!--                                    </table>-->
-            <!--                                </td>-->
-            <!--                            </tr>-->
-            <!--                            </tbody>-->
-            <!--                        </table>-->
-            <!--                    </td>-->
-            <!--                </tr>-->
-            <!--                </tbody>-->
-            <!--            </table>-->
+            <table class="row row-4" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                <tbody>
+                <tr>
+                    <td>
+                        <table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #fdfaf1; color: #000; width: 680px; margin: 0 auto;" width="680">
+                            <tbody>
+                            <tr>
+                                <td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
+                                    <table class="paragraph_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+                                        <tr>
+                                            <!--                                            <td class="pad" style="padding-bottom:40px;padding-left:30px;padding-right:30px;padding-top:40px;">-->
+                                            <!--                                                <div style="color:#2f2f2f;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;font-size:14px;line-height:150%;text-align:center;mso-line-height-alt:21px;">-->
+                                            <!--                                                    <p style="margin: 0; word-break: break-word;"><span><span style="color: #000000;">*Click here to unsuscribe from this post</span><span style="color: #000000;">.</span></span></p>-->
+                                            <!--                                                </div>-->
+                                            <!--                                            </td>-->
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
             <table class="row row-5" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                 <tbody>
                 <tr>
