--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -36,7 +36,7 @@ body, p, h1, h2, h3, h4, h5, h6, label, input, select, textarea, button {
     --background: #333c41;
     --onbackground: rgb(59, 64, 70);
     --onbackgroundfaded: rgba(49, 58, 63, 0.1);
-    --darkonbackground : #393d3d;
+    --darkonbackground : #4b4f4f;
     --primary: rgb(163, 180, 163);
     --onprimary: #29333a;
     --secondary: #595953;
@@ -81,7 +81,7 @@ body {
 }
 
 i {
-    color: var(--text);
+    color: var(--primary);
 }
 
 h2{
@@ -104,4 +104,52 @@ h3{
 
 form{
     margin-block-end: 0;
+}
+
+
+input[type="checkbox"] {
+    position: relative;
+    width: 1.5em;
+    height: 1.5em;
+    color: var(--primary);
+    border: 1px solid var(--primary);
+    border-radius: var(--border-hard);
+    appearance: none;
+    outline: 0;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    &::before {
+        position: absolute;
+        content: '';
+        display: block;
+        top: 2px;
+        left: 7px;
+        width: 8px;
+        height: 14px;
+        border-style: solid;
+        border-color: var(--background);
+        border-width: 0 2px 2px 0;
+        transform: rotate(45deg);
+        opacity: 0;
+    }
+    &:checked {
+        color: var(--background);
+        border-color: var(--primary);
+        background: var(--primary);
+        &::before {
+            opacity: 1;
+        }
+        ~ label::before {
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        }
+    }
+    &:focus-visible,
+    &:hover{
+        transform: translateY(-3px) ;
+        box-shadow: 4px 4px var(--primary);
+    }
+}
+
+label{
+    margin-bottom:0;
 }
