--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -4,6 +4,7 @@
 .row{
     display: flex;
     justify-content: center;
+
 }
 .column {
     display: flex;
@@ -70,13 +71,21 @@
 
 /*---------------------------------- Middle column ---------------------------------------------*/
 
-.filter-options {
-    border: 2px solid var(--bordercolor);
-    padding: 10px;
-    margin: 6px auto;
+.upper-feed-buttons-box {
+    padding: 1rem;
+    top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
     width: 100%;
     background-color: var(--onbackground);
-    border-radius: 10px;
+    color: var(--primary);
+    border: 1px solid var(--primary);
+    border-radius: var(--border-radius);
+    transform: translateY(-4px) ;
+    box-shadow: -3px 5px 0 0 var(--primary);
 }
 .filter-button {
     border-radius: 25px;
@@ -112,17 +121,23 @@
 
 /* ----------------------------------------------------- BlogPosts CSS-------------------------------------------------*/
 
+.upper-feed-buttons-box {
+
+}
 .blogpost {
-    width: 100%;
-    border: 2px solid var(--bordercolor);
+    margin: 1.25rem auto;
     padding: 20px;
-    margin: 5px auto;
+
+    width: 100%;
     background-color: var(--onbackground);
-    border-radius: 10px;
+    border: 1px solid var(--primary);
+    border-radius: var(--border-radius);
+    transition: all 0.3s ease-in-out;
 }
 
 .blogpost:hover{
-    border-color:var(--primary);
+    transform: translateY(-4px) ;
+    box-shadow: -3px 5px 0 0 var(--primary);
 }
 
 .blogpost-author-and-date{
@@ -159,6 +174,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
+    transition: all 0.3s ease-in-out;
     height: 20px; /* Adjust the height to control the fade-out length */
     background: linear-gradient(to bottom, var(--onbackgroundfaded), var(--onbackground));
 }
@@ -275,6 +291,8 @@
 
 .container {
     position: relative;
+    top: 20px;
+
 }
 
 /*--------------------LEFT COLUMN----------------------------*/
@@ -292,19 +310,21 @@
 
 .left-box {
     position: sticky;
+    padding: 1rem;
     top: 20px;
-
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+    gap: 1rem;
     width: 100%;
-    border: 2px solid var(--bordercolor);
-    padding: 10px;
-    margin: 5px auto;
+    height: 500px;
     background-color: var(--onbackground);
-    border-radius: 10px;
-
+    color: var(--primary);
+    border: 1px solid var(--primary);
+    border-radius: var(--border-radius);
+    transform: translateY(-4px) ;
+    box-shadow: -3px 5px 0 0 var(--primary);
 }
 
 .left-column-button {
@@ -322,6 +342,11 @@
 .sticky-bottom-button{
     position: sticky;
     bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:1.25rem;
 }
 .left-column-button:hover {
     border-color: var(--primary);
@@ -561,6 +586,7 @@ input[type=file]::file-selector-button:hover {
     align-items: center;
     margin-top: 5px;
     margin-bottom: 5px;
+    color:var(--text);
 }
 
 .pagination-button {
@@ -572,6 +598,8 @@ input[type=file]::file-selector-button:hover {
     border-radius: 10px;
     background-color: var(--onbackground);
     margin: 5px;
+    transition: all 0.3s ease-in-out;
+
 }
 
 
@@ -593,7 +621,10 @@ input[type=file]::file-selector-button:hover {
     padding: 4px; /* Adjust padding for better visual alignment */
 }
 .pagination-button:hover:not(.active) {
-    background-color: #ddd;
+    background-color: var(--darkonbackground);
+    transform: translateY(-2px);
+    box-shadow: 0 5px 0 0 var(--primary);
+    color: var(--primary);
 }
 
 
@@ -641,20 +672,45 @@ footer div {
     text-align: center;
     font-weight: normal;
     overflow: hidden;
+    cursor: pointer;
+    padding: 1em 1em;
     width: 200px;
+    transition: all 0.3s ease-in-out;
+
+    box-shadow: 0 0 0 0 var(--primary);
     background-color: var(--background);
     color: var(--primary);
     border: 1px solid var(--primary);
     border-radius: var(--border-hard);
-    padding: 1em 2em;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0 0 0 0 var(--primary);
 }
 
 .cool-button:hover ,
 .cool-button:active ,
 .cool-button:focus {
+    transform: translateY(-4px) ;
+    box-shadow: 0 5px 0 0 var(--primary);
+    color: var(--primary);
+}
+
+
+.cool-left-button {
+    text-align: left;
+    font-weight: bolder;
+    overflow: hidden;
+    cursor: pointer;
+    padding: 1em 1em;
+    width: 200px;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 0 0 0 var(--primary);
+    background-color: var(--onbackground);
+    color: var(--primary);
+    border: 1px solid var(--primary);
+    border-radius: var(--border-radius);
+}
+
+.cool-left-button:hover ,
+.cool-left-button:active ,
+.cool-left-button:focus-visible {
     transform: translateY(-4px) ;
     box-shadow: 0 5px 0 0 var(--primary);
     color: var(--primary);
