--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -29,6 +29,8 @@ body, p, h1, h2, h3, h4, h5, h6, label, input, select, textarea, button {
     --border-light: 5px;
     --border-radius: 10px;
     --border-hard: 50px;
+
+    --border: 1px solid var(--primary);
 }
 .dark-mode {
     --text: #ced3c1;
