--- a/webapp/src/main/webapp/resources/css/error.css
+++ b/webapp/src/main/webapp/resources/css/error.css
@@ -28,9 +28,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     text-align: center;
-    height: 90%;
 
 }
 
