--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -26,9 +26,7 @@
     max-width: 650px;
 }
 @media (max-width: 984px) {
-    .column-right {
-        display: none;
-    }
+
 }
 @media (max-width: 820px) {
     .column-left,
@@ -63,12 +61,17 @@
 .navbar-brand {
     font-size: 32px;
     color: var(--background);
+    transition: all 0.5s ease-in-out;
 }
 .navbar-brand:hover {
     color: var(--background);
-    text-shadow: 0 0 5px var(--onbackgroundfaded);/* Adjust the values for the desired glow effect */
+    text-shadow: 0 0 10px var(--onbackground);/* Adjust the values for the desired glow effect */
 }
-
+.navbar-brand:focus-within,
+.navbar-brand:focus,
+.navbar-brand:focus-visible{
+    color: var(--background);
+}
 /*---------------------------------- Middle column ---------------------------------------------*/
 
 .upper-feed-buttons-box {
@@ -254,7 +257,10 @@
     padding: 10px;
     background-color: var(--darkonbackground);
     border-radius: 10px;
-    border : 1px solid var(--bordercolor);
+    border : 1px solid var(--lighttext);
+
+    transform: translateY(-4px) ;
+    box-shadow: -3px 5px 0 0 var(--lighttext);
 }
 
 .comments-section-divider {
@@ -268,11 +274,41 @@
     margin-bottom: 10px;
 }
 
-.divider-line {
-    border: 0;
-    border-top: 2px solid var(--darkonbackground);
-    width: 100%;
+
+
+#success-container {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out; /* Adjust the transition duration as needed */
 }
+
+.success-container {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3); /* Semi-transparent background */
+    z-index: 50; /* Ensure it's above other elements */
+    justify-content: center;
+    align-items: center;
+}
+.success-container .success-box {
+    width: 500px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--onbackground);
+    color: var(--primary);
+    border: 1px solid var(--primary);
+    border-radius: var(--border-radius);
+    transform: translateY(-4px) ;
+    box-shadow: -3px 5px 0 0 var(--primary);
+}
+
 
 /*--------------------------WAVE ------------------------*/
 
@@ -372,11 +408,18 @@
 }
 
 .cool-left-button:hover ,
-.cool-left-button:active ,
 .cool-left-button:focus-visible {
     transform: translateY(-4px) ;
-    box-shadow: 0 5px 0 0 var(--primary);
+    box-shadow: -2px 4px 0 0 var(--primary);
     color: var(--primary);
+}
+
+.cool-left-button.active {
+    transform: translateY(-4px) ;
+    box-shadow: -2px 5px 0 0 var(--primary);
+    color: var(--primary);
+    border: 2px solid var(--primary);
+    background-color: rgba(250, 245, 216, 0.32);
 }
 
 
@@ -525,7 +568,6 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-
 }
 
 
@@ -656,6 +698,72 @@ input[type=file]::file-selector-button {
 input[type=file]::file-selector-button:hover {
     background: var(--primary);
 }
+
+/*-- loading --*/
+
+.loader-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    z-index: 1000; /* Ensure it's above other elements */
+    justify-content: center;
+    align-items: center;
+}
+.medium-size-container{
+    width: 500px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.small-size-container{
+    width: 500px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.loader {
+    display: block;
+    --height-of-loader: 10px;
+    --loader-color: var(--primary);
+    width: 30%;
+    height: var(--height-of-loader);
+    border-radius: 30px;
+    background-color: rgba(0,0,0,0.2);
+    position: relative;
+}
+
+.loader::before {
+    content: "";
+    position: absolute;
+    background:  var(--primary);
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    border-radius: 30px;
+    animation: moving 1s ease-in-out infinite;
+;
+}
+
+@keyframes moving {
+    50% {
+        width: 100%;
+    }
+
+    100% {
+        width: 0;
+        right: 0;
+        left: unset;
+    }
+}
 /*-------------------PAGINATION SELECTOR -----------------------------------*/
 .pagination {
     display: flex;
@@ -745,7 +853,6 @@ footer div {
 /*------------------------------------------------- requestmanager request manager --------------------*/
 
 .req-acc-users-list {
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -775,7 +882,8 @@ footer div {
     align-items: start;
 }
 .divider {
-    height: 2px;
+    margin: 5px 0 5px 0;
+    height: 1px;
     width: 100%;
     background-color: var(--bordercolor);
 }
@@ -827,6 +935,15 @@ footer div {
     box-shadow: 0 5px 0 0 var(--primary);
     color: var(--primary);
 }
+.cool-button:disabled{
+    border:1px solid var(--lighttext);
+    color: var(--lighttext);
+    box-shadow: 0 0 0 0 var(--primary);
+    transform: translateY(0) ;
+    cursor: not-allowed;
+}
+
+
 
 .cool-button.cool-small{
     width: 120px;
@@ -834,23 +951,24 @@ footer div {
 
 .cool-button.cool-small.on-bg{
     background-color: var(--onbackground);
-    padding: 0 0;
-
+    padding: 5px 5px;
 }
-
 
 
 .cool-input {
     font-size: 15px;
-    font-weight: 600;
+    font-weight: normal;
     border-radius: var(--border-radius);
-    border: 1px solid var(--primary);
+    border: var(--border);
     background-color: var(--darkonbackground);
     color: var(--text);
     width: 100%;
     padding: 5px 10px;
     outline: none;
     transition: all 0.3s ease-in-out;
+}
+.grey-input{
+    border:1px solid var(--lighttext);
 }
 
 .cool-input::placeholder {
@@ -861,5 +979,12 @@ footer div {
 .cool-input:hover,
 .cool-input:focus-visible {
     transform: translateY(-4px) ;
-    box-shadow: 4px 4px var(--primary);
+    box-shadow: -3px 4px var(--primary);
+}
+
+.grey-input:active ,
+.grey-input:hover ,
+.grey-input:focus-visible {
+    transform: translateY(-4px) ;
+    box-shadow: -3px 4px var(--lighttext);
 }
