--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -81,11 +81,11 @@
     flex-wrap: wrap;
     width: 100%;
     background-color: var(--onbackground);
-    color: var(--primary);
-    border: 1px solid var(--primary);
+    color: var(--text);
+    border: 1px solid var(--lighttext);
     border-radius: var(--border-radius);
-    transform: translateY(-4px) ;
-    box-shadow: -3px 5px 0 0 var(--primary);
+    transform: translateY(-3px) ;
+    box-shadow: -3px 4px 0 0 var(--lighttext);
 }
 .filter-button {
     border-radius: 25px;
@@ -127,10 +127,9 @@
 .blogpost {
     margin: 1.25rem auto;
     padding: 20px;
-
     width: 100%;
     background-color: var(--onbackground);
-    border: 1px solid var(--primary);
+    border: 1px solid var(--text);
     border-radius: var(--border-radius);
     transition: all 0.3s ease-in-out;
 }
@@ -138,6 +137,7 @@
 .blogpost:hover{
     transform: translateY(-4px) ;
     box-shadow: -3px 5px 0 0 var(--primary);
+    border : var(--border);
 }
 
 .blogpost-author-and-date{
@@ -352,11 +352,10 @@
     width: 100%;
     height: 500px;
     background-color: var(--onbackground);
-    color: var(--primary);
-    border: 1px solid var(--primary);
+    border: 1px solid var(--lighttext);
     border-radius: var(--border-radius);
     transform: translateY(-4px) ;
-    box-shadow: -3px 5px 0 0 var(--primary);
+    box-shadow: -3px 5px 0 0 var(--lighttext);
 }
 
 .left-column-button {
@@ -397,15 +396,15 @@
     padding: 1em 1em;
     width: 200px;
     transition: all 0.3s ease-in-out;
-    box-shadow: 0 0 0 0 var(--primary);
     background-color: var(--onbackground);
-    color: var(--primary);
-    border: 1px solid var(--primary);
+    color: var(--text);
+    border: 1px solid var(--text);
     border-radius: var(--border-radius);
 }
 
 .cool-left-button:hover ,
 .cool-left-button:focus-visible {
+    border: var(--border);
     transform: translateY(-4px) ;
     box-shadow: -2px 4px 0 0 var(--primary);
     color: var(--primary);
@@ -415,8 +414,7 @@
     transform: translateY(-4px) ;
     box-shadow: -2px 5px 0 0 var(--primary);
     color: var(--primary);
-    border: 2px solid var(--primary);
-    background-color: rgba(250, 245, 216, 0.32);
+    border: var(--border);
 }
 
 
@@ -1131,7 +1129,7 @@ h6 {
 .switch {
     --input-focus: var(--old-primary);
     --bg-color: var(--background);
-    --main-color: var(--primary);
+    --main-color: var(--text);
     position: relative;
     display: flex;
     flex-direction: column;
@@ -1184,4 +1182,22 @@ h6 {
 
 .toggle:checked + .slider:before {
     transform: translateX(30px);
+}
+
+/*---------------------------user profile box--------------------------------*/
+.grey-container {
+    overflow: hidden;
+    padding: 1em 1em;
+    width: 100%;
+    background-color: var(--background);
+    color: var(--text);
+    border: 1px solid var(--text);
+    border-radius: var(--border-radius);
+    transition: all 0.3s ease-in-out;
+}
+
+.grey-container:hover{
+    transform: translateY(-3px);
+    box-shadow: -2px 3px 0 var(--text);
+    cursor: pointer;
 }
