--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -314,7 +314,7 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    align-items: center;
+    align-items: stretch;
     gap: 1rem;
     width: 100%;
     height: 500px;
@@ -377,102 +377,6 @@
     transform: translateY(-4px) ;
     box-shadow: 0 5px 0 0 var(--primary);
     color: var(--primary);
-}
-
-
-/*----------------------------WEATHER ------------------------------------*/
-
-.cardContainer {
-    position: relative;
-    display: none;
-    align-items: center;
-    justify-content: center;
-}
-
-.weather-card {
-    position: relative;
-    width: 220px;
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 10px;
-    border-radius: 10px;
-    backdrop-filter: blur(30px);
-    background-color: var(--lighttext);
-    border: 1px solid var(--primary);
-    cursor: pointer;
-}
-
-.city {
-    font-weight: 700;
-    font-size: 0.9em;
-    letter-spacing: 1.2px;
-    color: white;
-}
-
-.weather {
-    font-weight: 500;
-    font-size: 0.7em;
-    letter-spacing: 1.2px;
-    color: rgb(0, 0, 0);
-}
-
-.temp {
-    font-size: 1.8em;
-    color: #b8e379;
-}
-
-.minmaxContainer {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.min,.max {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: center;
-    padding: 0px 20px;
-    gap: 4px;
-}
-
-.max {
-    align-items: flex-start;
-    border-left: 2px solid white;
-}
-
-.maxHeading,.minHeading {
-    font-size: 0.7em;
-    font-weight: 600;
-    color: white;
-}
-
-.maxTemp,.minTemp {
-    font-size: 0.6em;
-    font-weight: 500;
-    color: rgb(197, 197, 197);
-}
-
-.cardContainer::before {
-    width: 100px;
-    height: 100px;
-    content: "";
-    position: absolute;
-    background-color: rgb(144, 161, 255);
-    z-index: -1;
-    border-radius: 50%;
-    left: 100px;
-    top: 50px;
-    transition: all 1s;
-}
-
-.cardContainer:hover::before {
-    transform: translate(-50px ,50px);
 }
 
 /*-------------------------------------PUBLISH/TAG INPUT------------------------*/
