Add filter by tags widget
Added filter by tags widget to be displayed in right column below the
calendar

--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -99,7 +99,7 @@ h2{
 h3{
     font-size: 16px;
     font-weight: bolder;
-    color: var(--primary);
+    color: inherit;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
