--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -485,11 +485,11 @@
     padding: 2em 2em;
     width: 100%;
     background-color: var(--onbackground);
-    color: var(--primary);
-    border: 1px solid var(--primary);
+    color: var(--text);
+    border: 1px solid var(--lighttext);
     border-radius: var(--border-radius);
     transform: translateY(-4px) ;
-    box-shadow: 0 5px 0 0 var(--primary);
+    box-shadow: 0 5px 0 0 var(--lighttext);
 }
 
 
