--- a/webapp/src/main/webapp/resources/css/calendarBox.css
+++ b/webapp/src/main/webapp/resources/css/calendarBox.css
@@ -18,10 +18,10 @@
     height: 50%;
     background-color: var(--onbackground);
     color: var(--primary);
-    border: 1px solid var(--primary);
+    border: 1px solid var(--lighttext);
     border-radius: var(--border-radius);
     transform: translateY(-4px) ;
-    box-shadow: -3px 5px 0 0 var(--primary);
+    box-shadow: -3px 5px 0 0 var(--lighttext);
 }
 .wrapper header{
     display: flex;
