--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -8,17 +8,15 @@
 }
 
 .column-left{
-    max-width: 650px;
     flex: 1;
 }
 
 .column-right {
-    flex: 1;
+    flex: 2;
 }
 
 .column-middle {
-    flex: 3;
-    max-width: 650px;
+    flex: 4;
 }
 @media (max-width: 984px) {
     .column-right {
@@ -331,7 +329,7 @@
 
 .left-column-container {
     position: relative;
-    width: 250px;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -413,8 +411,9 @@
 .cool-left-button.active {
     transform: translateY(-4px) ;
     box-shadow: -2px 5px 0 0 var(--primary);
-    color: var(--primary);
-    border: var(--border);
+    color: var(--background);
+    border: 1px solid var(--background);
+    background-color: var(--primary);
 }
 .filtered-tags{
     display: flex;
@@ -538,17 +537,16 @@
 .tags-input-wrapper{
     width: 100%;
     margin-top´:5px;
-
 }
 
 .tags-input-wrapper input{
+    width: 100%;
     font-size: 14px;
     font-weight: normal;
     border-radius: var(--border-radius);
     border: 1px solid var(--accent);
     background-color: var(--darkonbackground);
     color: var(--text);
-    width: 100%;
     padding: 5px 10px;
     outline: none;
     transition: all 0.3s ease-in-out;
@@ -1019,7 +1017,7 @@ h6 {
 }
 
 .b-b-default {
-    border-bottom: 1px solid var(--lighttext);
+    border-bottom: 1px solid var(--bordercolor);
 }
 
 .m-b-20 {
@@ -1041,7 +1039,7 @@ h6 {
 }
 
 .text-muted {
-    color: #919aa3 !important;
+    color: var(--lighttext) !important;
 }
 
 
@@ -1077,12 +1075,59 @@ h6 {
     gap: 1rem;
     width: 100%;
 }
+
+
+.profile-pic {
+    color: transparent;
+    transition: all 0.3s ease;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    & input{
+        display: none;
+
+    }
+    & img{
+        position: absolute;
+        object-fit: cover;
+        width: 165px;
+        height: 165px;
+        box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.35);
+        border-radius: 100px;
+        z-index: 0;
+    }
+    & .-label{
+        cursor: pointer;
+        height: 165px;
+        width: 165px;
+    }
+    &:hover{
+        & .-label {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 10000;
+            color: rgb(250, 250, 250); /* Assuming you have a $fontColor variable defined */
+            transition: background-color 0.2s ease-in-out;
+            border-radius: 100px;
+            margin-bottom: 0;
+        }
+    }
+    & span{
+        display: inline-flex;
+        padding: 0.2em;
+        height: 2em;
+    }
+}
+
 /*-----------------*/
 
 .switch {
     --input-focus: var(--old-primary);
     --bg-color: var(--background);
-    --main-color: var(--text);
+    --main-color: var(--lighttext);
     position: relative;
     display: flex;
     flex-direction: column;
