--- a/webapp/src/main/webapp/resources/css/landingPage.css
+++ b/webapp/src/main/webapp/resources/css/landingPage.css
@@ -43,7 +43,6 @@
     align-items: center;
     gap:50px;
 }
-
 .landing-neibo{
     font-size: 80px;
     font-weight: bold;
@@ -53,6 +52,7 @@
     text-overflow: ellipsis;
     margin-top: 3rem;
     text-align: center;
+    font-family: -apple-system-headline, BlinkMacSystemFont, sans-serif;
 }
 
 #logo{
