--- a/webapp/src/main/webapp/resources/css/calendarBox.css
+++ b/webapp/src/main/webapp/resources/css/calendarBox.css
@@ -22,6 +22,7 @@
     border-radius: var(--border-radius);
     transform: translateY(-4px) ;
     box-shadow: -3px 5px 0 0 var(--lighttext);
+    margin-bottom: 20px;
 }
 .wrapper header{
     display: flex;
@@ -143,4 +144,25 @@ header .current-date{
     border-radius: 50%;
     transform: translate(-50%, -50%);
     background: var(--accent); /* Use the --accent color for the circle */
+}
+
+.calendar .days li.today {
+    z-index: 1;
+    cursor: pointer;
+    position: relative;
+    margin-top: 15px;
+    color: var(--onbackground); /* Set the text color to white */
+}
+
+.calendar .days li.today::before {
+    position: absolute;
+    content: "";
+    left: 50%;
+    top: 50%;
+    height: 35px;
+    width: 35px;
+    z-index: -1;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    background: var(--error);
 }
