Fix profile pic upload display

--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -54,7 +54,7 @@ body {
     --error: #de6f6f;
     --scrollbarthumb: #9a968c;
     --bordercolor: #646462;
-    --admin-color: #578a66;
+    --admin-color: #8bcb9d;
 }
 
 
