Resolve various corrections

--- a/webapp/src/main/webapp/resources/css/calendarBox.css
+++ b/webapp/src/main/webapp/resources/css/calendarBox.css
@@ -134,6 +134,7 @@ header .current-date{
 
 .calendar .days li.event::before {
     position: absolute;
+    cursor: pointer;
     content: "";
     left: 50%;
     top: 50%;
