--- a/webapp/src/main/webapp/resources/css/landingPage.css
+++ b/webapp/src/main/webapp/resources/css/landingPage.css
@@ -157,6 +157,8 @@
     justify-content: center;
 }
 
+input[type="text"],
+input[type="number"],
 .input {
     width: 100%;
     height: 40px;
@@ -181,6 +183,14 @@
     }
 }
 
+.form-input{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
 
 .title {
     color: var(--primary);
@@ -224,12 +234,12 @@
 
 .centered-column{
     margin: 1rem;
+    width: 220px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    width: 300px;
 }
 
 .cool-select {
@@ -263,4 +273,5 @@
     color: var(--error);
     font-size: 14px;
 }
+
 
